# Nginx-front-back-end-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: CMakeLists.txt
backend/example/: main.cpp
backend/include/webengine/: AuthProvider.hpp  Http.hpp  Json.hpp  LighttpdController.hpp  NginxController.hpp  Role.hpp  TestAuthProvider.hpp  WebEngine.hpp  WebServerController.hpp
backend/src/: Acl.hpp  AclStore.hpp  AuthHandler.cpp  AuthHandler.hpp  LighttpdController.cpp  Listener.cpp  Listener.hpp  NginxController.cpp  ProcessUtil.cpp  ProcessUtil.hpp  Router.cpp  Router.hpp  Session.cpp  Session.hpp  TokenStore.hpp  WebEngine.cpp  WebServerFactory.cpp  main.cpp  util.hpp
doc/api/: opencollection.yml
doc/api/General/: Auth-Login.yml  Auth-logout.yml  Get dashboard.yml
doc/api/Simple Auto Test/: API Private.yml  API Public.yml  API-Private-admin.yml  API-Private-user.yml  API-Private-viewer.yml  Static File Private.yml  folder.yml
doc/api/environments/: Accuenergy-LPC1.yml  LPC1-Lighttpd-webengine.yml  LPC1-Nginx-webengine.yml
lighttpd/: lighttpd.conf
lighttpd/conf.d/: listen.conf
nginx/: nginx.conf  nginx.target.conf
nginx/conf.d/: listen.conf
systemd/: README.md  beast-backend.service  nginx-wait.conf
www/: index.html
www/protected/: dashboard.html  hello.txt
